[package]
name = "http-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
http-mitm-proxy = "0.1.0"
rcgen = "0.11.3"
tokio = { version = "1.34.0", features = ["full"] }
tokio-native-tls = "0.3.1"
